@@ -87,6 +87,7 @@ ELSE(CMTK_SINGLE_COMMAND_BINARY)
       unsplit
       volume_injection
       volume_reconstruction
+      warp
       warp2ps
       xform2dfield)
 
@@ -107,9 +108,8 @@ ELSE(CMTK_SINGLE_COMMAND_BINARY)
     ENDIF(CMTK_USE_DCMTK)
     
     IF(CMTK_USE_VTK)
-      SET(VTK_APPS align_landmarks asegment sympl warp)
+      SET(VTK_APPS align_landmarks)
     ELSE(CMTK_USE_VTK)
-      SET(APPS ${APPS} warp)
     ENDIF(CMTK_USE_VTK)
     
   ENDIF(NOT CMTK_USE_MPI)
