@@ -41,13 +41,15 @@
 
 #include <cmtkAffineXform.h>
 
+#include <cmtkLandmarkListVTK.h>
+
 int main ( const int argc, const char *argv[] )
 {
   cmtk::Study::SmartPtr refStudy( cmtk::Study::Read( argv[1] ) );
   cmtk::Study::SmartPtr fltStudy( cmtk::Study::Read( argv[2] ) );
 
-  cmtk::LandmarkList::SmartPtr refLL = refStudy->GetLandmarkList();
-  cmtk::LandmarkList::SmartPtr fltLL = fltStudy->GetLandmarkList();
+  cmtk::LandmarkListVTK::SmartPtr refLL = refStudy->GetLandmarkList();
+  cmtk::LandmarkListVTK::SmartPtr fltLL = fltStudy->GetLandmarkList();
 
   vtkPoints *refPoints, *fltPoints;
   refPoints = refLL->GetMatchedVtkPoints( fltPoints, fltLL );
